# spatula

./: .gitignore  .plan.md  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.rst  CMakeLists.txt  CONTRIBUTING.rst  ContributorAgreement.md  LICENSE  acknowledgements.md  architecture.md  changelog.rst  hatch-cmake.py  hatch_cmake.py  install-prereqs.py  pyproject.toml  readme.rst  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build_wheels.yml  buld_wheels.yml  make-changelog-md.sh  release.yaml  requirements-test.in  requirements-test.txt  run_tests.yml  update-conda-lockfiles.yaml
.github/workflows/env-files/: environment.yaml  py310-conda-lock.yml  py311-conda-lock.yml  py312-conda-lock.yml  py313-conda-lock.yml
.github/workflows/envs/: environment.yaml  py310-conda-lock.yml  py311-conda-lock.yml  py313-conda-lock.yml  update-lockfiles.sh
benchmarks/: group_size_scaling.py  group_size_scaling_plots.py  microbenchmark.py  pgop_vs_msm_bench.py  pgop_vs_msm_generate_data.py  simulation_bench.py  strong_scaling_plots.py
benchmarks/data/: group_size_scaling.txt  m1.txt  purdue_anvil.txt
dependencies/: BS_thread_pool.hpp
docs/: conf.py  environment.yml  module-optimize.rst  requirements.in  requirements.txt  requirements_docs.txt
docs/source/: PGOP_example.ipynb  api.rst  citing.rst  conf.py  credits.rst  index.rst  installation.rst  module-cartrep.rst  module-optimize.rst  module-util.rst  module-wignerd.rst  nucleation.gsd  ref.bib  references.rst  theory.rst  tutorials.rst
docs/source/_templates/: page.html
pgop/: CMakeLists.txt  __init__.py  bond_order.py  cartrep.py  data.h5  integrate.py  optimize.py  pgop.py  representations.py  sph_harm.py  util.py  weijerd.py  wignerd.py
pgop/generate/: generate.py  normalizations.py  rotations.py  util.py
spatula/: CMakeLists.txt  __init__.py  _fundamental_zone.py  _grid.py  _grids.py  bond_order.py  boosop.py  integrate.py  optimize.py  pgop.py  representations.py  sph_harm.py  sphere-codes.npz  util.py
src/: BOOSOP.cc  BOOSOP.h  BondOrder.cc  BondOrder.h  CMakeLists.txt  Metrics.cc  Metrics.h  Optimize.cc  Optimize.h  PGOP.cc  PGOP.h  QlmEval.cc  QlmEval.h  Quaternion.cc  Quaternion.h  Threads.h  Util.cc  Util.h  Vec3.cc  Vec3.h  Weijer.cc  Weijer.h  computes.h  export-boosop.cc  export-boosop.h  export-module.cc  export-pgop-wrap.h  export-pgop.h  export-spatula.cc  export-spatula.h  export-stores.cc  export-stores.h  locality.h  stores.h
src/benchmarks/: Metrics.cpp  bench.sh  metrics.cc  optimizers.cc
src/computes/: ispc.h  math.ispc  neon.h  pgop_fisher.ispc  pgop_gaussian.ispc
src/data/: Quaternion.cc  Quaternion.h  RotationMatrix.h  Vec3.cc  Vec3.h  export-data.cc  export-data.h  export-quaternion.cc  export-vec.cc  vec3_operators.cc
src/nanobind/: CMakeLists.txt  export-PGOP.cc  export-PGOP.h  export-Vec3.cc  export-Vec3.h  export-boosop.cc  export-boosop.h  export-optimize.h  export-optimizer.cc  export-optimizer.h  export-pgop-wrap.h  export-pgop.h  export-quat.cc  export-quat.h  export-quaternion.cc  export-quaternion.h  export-stores.cc  export-stores.h  export-threads.cc  export-threads.h  export-utils.cc  export-utils.h  export-vec.cc  export-vec.h  export.cc  export_optimize.cc  export_optimize.h
src/optimize/: BruteForce.cc  BruteForce.h  GradientDescent.cc  GradientDescent.h  LineSearch.cc  LineSearch.h  LocalBinaryOptimizer.cc  LocalBinaryOptimizer.h  LocalFIRE.cc  LocalFIRE.h  LocalMonteCarlo.cc  LocalMonteCarlo.h  LocalSequential.cc  LocalSequential.h  Mesh.cc  Mesh.h  MonteCarlo.cc  MonteCarlo.h  NelderMead.cc  NelderMead.h  NoOptimization.cc  NoOptimization.h  Optimize.cc  Optimize.h  RandomSearch.cc  RandomSearch.h  StepGradientDescent.cc  StepGradientDescent.h  Union.cc  Union.h  export_optimize.cc  export_optimize.h
src/util/: Metrics.cc  Metrics.h  QlmEval.cc  QlmEval.h  Threads.cc  Threads.h  Util.cc  Util.h  Weijer.cc  Weijer.h  export-metrics.cc  export-threads.cc  export-threads.h  export-utils.cc  export-utils.h  fastmath.h
test/: test_weijerd.py
tests/: conftest.py  test_bod.py  test_cartesian_rep.py  test_grid.py  test_pgop.py  test_representations.py  test_shapes.py  test_weijerd.py  test_wignerd.py
tests/data/: data.h5  shape_vertices.json
