[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"


[project]
name = "pgop"
version = "0.0.1"
requires-python = ">=3.8"
description = "Local environment point group analysis for point cloud data."
maintainers = [{name = "Brandon Butler", email = "butlerbr@umich.edu"}]
authors = [{name = "Brandon Butler et al.", email = "butlerbr@umich.edu"}]
keywords = ["order parameter", "point groups", "molecular simulations"]
classifiers = [
        "Development Status :: 2 - Pre-Alpha",
        "Natural Language :: English",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
    ]
dependencies = [
    "numpy",  # basic numerical Python
    "freud-analysis>=3.0.0",  # for neighbor finding
    "scipy",
]

[project.optional-dependencies]
test = [
    "pytest",
    "coxeter",
]


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "B","D","E","F","I","N","S","W","C4","UP","C90","NPY","PTH","SIM","PIE790","PIE794",
]
ignore = ["B905","D107","D213","D211","E741","S101","UP006","SIM116"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["D", "B018", "F811"]
"tests/test_wignerd.py" = ["N802"]
