[build-system]
requires = ["numpy>=2.0.0", "scikit-build-core", "nanobind>=2.0.0"]
build-backend = "scikit_build_core.build"


[project]
name = "spatula-analysis"
version = "0.1.1"
requires-python = ">=3.12"
description = "Point group symmetry analysis of local environments for point cloud data."
readme = "README.rst"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["order parameter", "point groups", "molecular simulations", "symmetry", "crystallography", "condensed matter", "soft matter"]
classifiers = [
        "Development Status :: 4 - Beta",
        "Natural Language :: English",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
    ]
dependencies = [
    "numpy",
    "freud-analysis>=3.0.0,!=3.2.0",
    "scipy",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-rerunfailures",
    "coxeter",
]

[project.urls]
Documentation = "https://spatula.readthedocs.io"
Download = "https://pypi.org/project/spatula-analysis/"
Source = "https://github.com/glotzerlab/spatula"
Issues = "https://github.com/glotzerlab/spatula/issues"

[tool.cibuildwheel]
archs = ["auto64"]
skip = ["pp*","*musllinux*","cp3??t-*"]

# Use abi3audit to catch issues with Limited API wheels
[tool.cibuildwheel.linux]
repair-wheel-command = [
  "auditwheel repair -w {dest_dir} {wheel}",
  "pipx run abi3audit --strict --verbose {wheel}",
]

[tool.cibuildwheel.macos]
repair-wheel-command = [
  "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}",
  "pipx run abi3audit --strict --verbose {wheel}",
]
[tool.cibuildwheel.windows]
repair-wheel-command = [
  "copy {wheel} {dest_dir}",
  "pipx run abi3audit --strict --verbose {wheel}",
]
[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "B","D","E","F","I","N","S","W","C4","UP","C90","NPY","PTH","SIM","PIE790","PIE794",
]
ignore = ["B905","D107","D213","D211","E741","S101","UP006","SIM116","D203"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["D", "B018", "F811"]
"tests/test_wignerd.py" = ["N802"]
"docs/source/conf.py" = ["D100"]

[tool.scikit-build]
sdist.exclude = [".github", "docs"]
wheel.packages = ["spatula"]           # copy the whole Python package folder into the wheel
wheel.py-api = "cp312"
